[package]
name = "why-not"
version = "0.1.0"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Output a string repeatedly"
categories = ["command-line-utilities"]
keywords = ["yes"]

[[bin]]
name = "wyn"
path = "src/main.rs"

[dependencies]
clap = "2.33"
atty = "0.2"
